[package]
name = "phala_games_STB"
version = "0.1.0"
authors = ["Entity54"]
edition = "2021"

[dependencies]
ink = { version = "4", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.4.0" }

pink-extension = { version = "0.4", default-features = false }

pink-utils = { version = "0.1", default-features = false } 
sp-arithmetic = { version = "15", default-features = false }

#hex = { version = "0.4.3", default-features = false, features = ["alloc"] }


[dev-dependencies]
pink-extension-runtime = "0.4"

[lib]
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "serde-json-core/std",
    "pink-utils/std",
    "sp-arithmetic/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false
